--- a/style/index.css
+++ b/style/index.css
@@ -80,60 +80,49 @@ body {
   margin: 0;
 }
 
-/* Add a little padding to ensure spacing is correct between content and header nav */
+/* Container for [aside] & [section] */
 main {
-  padding-top: 1.5rem;
-  display: inline-flex;
-  /* grid-template-columns: 30% auto; */
+  /* padding-top: 1.5rem; */
+  margin: 2rem;
+  width: 100%;
 
+  display: flex;
+  flex-wrap: nowrap;
+
+  justify-content: stretch;
+
+  /* stretch container items all to the same height */
+  align-items: stretch;
+
+  gap: 2rem;
 }
 
 aside {
+  flex-basis: auto;
+  align-content: stretch;
+  /* 1st col in the container */
+  order: 0;
   font-size: 1rem;
   /* width: 30%; */
-  min-width: 20rem;
+  min-width: 15rem;
   max-width: 20rem;
   padding-left: 1rem;
   padding-right: 1rem;
-  /* padding: 0 15px; */
-  margin-inline-start: 15px;
-  /* float: left; */
 }
 
 section {
-  border-top: var(--border-width) solid var(--border);
-  border-bottom: var(--border-width) solid var(--border);
-  /* padding: 2rem 1rem; */
-  margin: 2rem;
-  width: auto;
+  /* 2nd column item in the container */
+  order: 2;
+  /* border-top: var(--border-width) solid var(--border);
+  border-bottom: var(--border-width) solid var(--border); */
+  border: var(--border-width) solid var(--marked);
+  padding: 1rem;
 }
 
-article h2:first-child,
-section h2:first-child,
-article h3:first-child,
-section h3:first-child {
-  margin-top: 1rem;
+section>* {
+  /* width: 1000px; */
+  margin: 1rem 1rem;
 }
-
-/* Don't double separators when chaining sections */
-section+section,
-section:first-child {
-  border-top: 0;
-  padding-top: 0;
-}
-
-section+section {
-  margin-top: 0;
-}
-
-section:last-child {
-  border-bottom: 0;
-  padding-bottom: 0;
-}
-
-/* body>* {
-  grid-column: 2;
-} */
 
 /* Make the header bg full width, but the content inline with body */
 body>header {
@@ -141,7 +130,7 @@ body>header {
   border-bottom: var(--border-width) solid var(--border);
   text-align: center;
   padding: 0 0.5rem 2rem 0.5rem;
-  /* grid-column: 1 / -1; */
+
 }
 
 body>header>*:only-child {
@@ -164,232 +153,11 @@ body>footer {
   color: var(--text-light);
   font-size: 0.9rem;
   text-align: center;
-  border-top: var(--border-width) solid var(--border);
-}
-
-/* Format headers */
-h1 {
-  font-size: 3rem;
-}
-
-h2 {
-  font-size: 2.6rem;
-  margin-top: 3rem;
-}
-
-h3 {
-  font-size: 2rem;
-  margin-top: 3rem;
-}
-
-/* h4 {
-  font-size: 1.44rem;
-}
-
-h5 {
-  font-size: 1.15rem;
-}
-
-h6 {
-  font-size: 0.96rem;
-} */
-
-p {
-  margin: 1.5rem 0;
-}
-
-/* Prevent long strings from overflowing container */
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  overflow-wrap: break-word;
-}
-
-/* Fix line height when title wraps */
-h1,
-h2,
-h3 {
-  line-height: 1.1;
-}
-
-/* Reduce header size on mobile */
-@media only screen and (max-width: 720px) {
-  h1 {
-    font-size: 2.5rem;
-  }
-
-  h2 {
-    font-size: 2.1rem;
-  }
-
-  h3 {
-    font-size: 1.75rem;
-  }
-
-  h4 {
-    font-size: 1.25rem;
-  }
-}
-
-/* Format links & buttons */
-a,
-a:visited {
-  color: var(--accent);
-}
-
-a:hover {
-  text-decoration: none;
-}
-
-button,
-.button,
-a.button,
-/* extra specificity to override a */
-input[type="submit"],
-input[type="reset"],
-input[type="button"] {
-  border: var(--border-width) solid var(--accent);
-  background-color: var(--accent);
-  color: var(--accent-text);
-  padding: 0.5em;
-  text-decoration: none;
-  line-height: normal;
-}
-
-.button[aria-disabled="true"],
-input:disabled,
-textarea:disabled,
-select:disabled,
-button[disabled] {
-  cursor: not-allowed;
-  background-color: var(--disabled);
-  border-color: var(--disabled);
-  color: var(--text-light);
-}
-
-input[type="range"] {
-  padding: 0;
-}
-
-/* Set the cursor to '?' on an abbreviation and style the abbreviation to show that there is more information underneath */
-abbr[title] {
-  cursor: help;
-  text-decoration-line: underline;
-  text-decoration-style: dotted;
-}
-
-button:enabled:hover,
-.button:not([aria-disabled="true"]):hover,
-input[type="submit"]:enabled:hover,
-input[type="reset"]:enabled:hover,
-input[type="button"]:enabled:hover {
-  background-color: var(--accent-hover);
-  border-color: var(--accent-hover);
-  cursor: pointer;
-}
-
-.button:focus-visible,
-button:focus-visible:where(:enabled),
-input:enabled:focus-visible:where([type="submit"],
-  [type="reset"],
-  [type="button"]) {
-  outline: 2px solid var(--accent);
-  outline-offset: 1px;
-}
-
-/* Format navigation */
-header nav {
-  font-size: 1rem;
-  line-height: 2;
-  padding: 1rem 0 0 0;
-}
-
-/* Use flexbox to allow items to wrap, as needed */
-header nav ul,
-header nav ol {
-  align-content: space-around;
-  align-items: center;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-/* List items are inline elements, make them behave more like blocks */
-header nav ul li,
-header nav ol li {
-  display: inline-block;
-}
-
-header nav a,
-header nav a:visited {
-  margin: 0 0.5rem 1rem 0.5rem;
-  border: var(--border-width) solid var(--border);
-  border-radius: var(--standard-border-radius);
-  color: var(--text);
-  display: inline-block;
-  padding: 0.1rem 1rem;
-  text-decoration: none;
-}
-
-header nav a:hover,
-header nav a.current,
-header nav a[aria-current="page"],
-header nav a[aria-current="true"] {
-  background: var(--bg);
-  border-color: var(--accent);
-  color: var(--accent);
-  cursor: pointer;
-}
-
-/* Reduce nav side on mobile */
-@media only screen and (max-width: 720px) {
-  header nav a {
-    border: none;
-    padding: 0;
-    text-decoration: underline;
-    line-height: 1;
-  }
-
-  header nav a.current {
-    background: none;
-  }
-}
-
-/* Consolidate box styling */
-aside,
-details,
-pre,
-progress {
-  background-color: var(--accent-bg);
-  border: var(--border-width) solid var(--border);
-  border-radius: var(--standard-border-radius);
-  margin-bottom: 1rem;
+  border-top: var(--border-width) solid var(--marked);
 }
 
 
-/* *[dir="rtl"] aside {
-  float: left;
-} */
-
-/* Make aside full-width on mobile */
-@media only screen and (max-width: 720px) {
-  aside {
-    width: 100%;
-    /* height: 100vh; */
-    float: none;
-    margin-inline-start: 0;
-  }
-}
-
-article,
+/* article,
 fieldset,
 dialog {
   border: var(--border-width) solid var(--border);
@@ -420,40 +188,7 @@ details[open]>summary {
 
 details[open]> :last-child {
   margin-bottom: 0;
-}
-
-/* Format tables */
-table {
-  border-collapse: collapse;
-  margin: 1.5rem 0;
-}
-
-figure>table {
-  width: max-content;
-  margin: 0;
-}
-
-td,
-th {
-  border: var(--border-width) solid var(--border);
-  text-align: start;
-  padding: 0.5rem;
-}
-
-th {
-  background-color: var(--accent-bg);
-  font-weight: bold;
-}
-
-tr:nth-child(even) {
-  /* Set every other cell slightly darker. Improves readability. */
-  background-color: var(--accent-bg);
-}
-
-table caption {
-  font-weight: bold;
-  margin-bottom: 0.5rem;
-}
+} */
 
 /* Format forms */
 textarea,
@@ -488,79 +223,24 @@ textarea:not([cols]) {
 }
 
 /* Add arrow to drop-down */
-select:not([multiple]) {
+/* select:not([multiple]) {
   background-image: linear-gradient(45deg, transparent 49%, var(--text) 51%),
     linear-gradient(135deg, var(--text) 51%, transparent 49%);
   background-position: calc(100% - 15px), calc(100% - 10px);
   background-size: 5px 5px, 5px 5px;
   background-repeat: no-repeat;
   padding-inline-end: 25px;
-}
-
-*[dir="rtl"] select:not([multiple]) {
-  background-position: 10px, 15px;
-}
-
-/* checkbox and radio button style */
-input[type="checkbox"],
-input[type="radio"] {
-  vertical-align: middle;
-  position: relative;
-  width: min-content;
-}
-
-input[type="checkbox"]+label,
-input[type="radio"]+label {
-  display: inline-block;
-}
-
-input[type="radio"] {
-  border-radius: 100%;
-}
-
-input[type="checkbox"]:checked,
-input[type="radio"]:checked {
-  background-color: var(--accent);
-}
-
-input[type="checkbox"]:checked::after {
-  /* Creates a rectangle with colored right and bottom borders which is rotated to look like a check mark */
-  content: " ";
-  width: 0.2em;
-  height: 0.4em;
-  border-radius: 0;
-  position: absolute;
-  top: 0.04em;
-  left: 0.18em;
-  background-color: transparent;
-  border-right: solid var(--bg) 0.08em;
-  border-bottom: solid var(--bg) 0.08em;
-  font-size: 1.8em;
-  transform: rotate(45deg);
-}
-
-input[type="radio"]:checked::after {
-  /* creates a colored circle for the checked radio button  */
-  content: " ";
-  width: 0.3em;
-  height: 0.3em;
-  border-radius: 100%;
-  position: absolute;
-  top: 0.125em;
-  background-color: var(--bg);
-  left: 0.125em;
-  font-size: 1.8em;
-}
+} */
 
 /* Makes input fields wider on smaller screens */
-@media only screen and (max-width: 720px) {
+/* @media only screen and (max-width: 720px) {
 
   textarea,
   select,
   input {
     width: 100%;
   }
-}
+} */
 
 /* Set a height for color input */
 /* input[type="color"] {
@@ -581,7 +261,7 @@ hr {
   margin: 1rem auto;
 }
 
-mark {
+/* mark {
   padding: 2px 5px;
   border-radius: var(--standard-border-radius);
   background-color: var(--marked);
@@ -590,35 +270,35 @@ mark {
 
 mark a {
   color: #0d47a1;
-}
+} */
 
-img,
+/* img,
 video {
   max-width: 100%;
   height: auto;
   border-radius: var(--standard-border-radius);
-}
+} */
 
-figure {
+/* figure {
   margin: 0;
   display: block;
   overflow-x: auto;
-}
+} */
 
-figure>img,
+/* figure>img,
 figure>picture>img {
   display: block;
   margin-inline: auto;
-}
+} */
 
-figcaption {
+/* figcaption {
   position: sticky;
   left: 0;
   text-align: center;
   font-size: 0.9rem;
   color: var(--text-light);
   margin-block: 1rem;
-}
+} */
 
 blockquote {
   margin-inline-start: 2rem;
@@ -641,14 +321,6 @@ cite {
 } */
 
 /* Use mono font for code elements */
-code,
-pre,
-pre span,
-kbd,
-samp {
-  font-family: var(--mono-font);
-  color: var(--code);
-}
 
 kbd {
   color: var(--preformatted);
@@ -669,91 +341,17 @@ pre {
 pre code {
   color: var(--preformatted);
   background: none;
-  margin: 0;
   padding: 0;
 }
 
-/* Progress bars */
-/* Declarations are repeated because you */
-/* cannot combine vendor-specific selectors */
-/* progress {
-  width: 100%;
-}
-
-progress:indeterminate {
-  background-color: var(--accent-bg);
-}
-
-progress::-webkit-progress-bar {
-  border-radius: var(--standard-border-radius);
-  background-color: var(--accent-bg);
-}
-
-progress::-webkit-progress-value {
-  border-radius: var(--standard-border-radius);
-  background-color: var(--accent);
-}
-
-progress::-moz-progress-bar {
-  border-radius: var(--standard-border-radius);
-  background-color: var(--accent);
-  transition-property: width;
-  transition-duration: 0.3s;
-}
-
-progress:indeterminate::-moz-progress-bar {
-  background-color: var(--accent-bg);
-} */
-
-/* dialog {
-  background-color: var(--bg);
-  max-width: 40rem;
-  margin: auto;
-}
-
-dialog::backdrop {
-  background-color: var(--bg);
-  opacity: 0.8;
-}
-
-@media only screen and (max-width: 720px) {
-  dialog {
-    max-width: calc(100vw - 2rem);
-  }
-} */
-
-/* Superscript & Subscript */
-/* Prevent scripts from affecting line-height. */
-sup,
-sub {
-  vertical-align: baseline;
-  position: relative;
-}
-
-sup {
-  top: -0.4em;
-}
-
-sub {
-  top: 0.3em;
-}
-
 /* Classes for notices */
-.notice {
+/* .notice {
   background: var(--accent-bg);
   border: var(--border-width) solid var(--border);
   border-radius: var(--standard-border-radius);
   padding: 1.5rem;
   margin: 2rem 0;
-}
-
-div.notice p:first-of-type {
-  margin-top: 0;
-}
-
-div.notice p:last-of-type {
-  margin-bottom: 0;
-}
+} */
 
 /* Print */
 /* @media print {
