--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -31,7 +31,8 @@
 
   /* #endregion */
 
-  /* #region ##  Theme (L)  ## */
+  /* #region ##  Light Color Theme  ## */
+  
   --bg: #fff;
   --bg-mdn: #18191b;
   --bg-header: #fff;
@@ -51,8 +52,8 @@
   --disabled: #efefef;
 
   /* Tree View Colors */
-  --tree-bg: rgba(241, 241, 241, 0.8);
-  --tree-text: var(--text);
+  --tree-bg: rgba(42, 42, 42, 0.88);
+  --tree-text: rgba(241, 241, 241, 0.8);
   --tree-border: var(--text-light);
   --tree-caret: #696;
   --tree-caret-last: #656;
@@ -64,6 +65,7 @@
   /* #endregion */
 
   /* #region ##  Text/Headers  ## */
+  
   --text-h1-l: 2.5rem;
   --text-h2-l: 2rem;
   --text-h3-l: 1.5rem;
@@ -92,3 +94,316 @@
 
   /* #endregion */
 }
+
+/* #region ---  @media (dark)  --- */
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    color-scheme: dark;
+    
+    /* --bg: #212121; */
+    /* --bg-accent: #2b2b2b; */
+    /* --bg-header: #212121; */
+    --bg: #18191b;
+    --bg-accent: #191a1b;
+    --bg-header: #191a1b;
+
+    --text: #dcdcdc;
+    --text-light: #ababab;
+    --accent: #ffb300;
+    --accent-hover: #ffe099;
+    --text-accent: #fff;
+    --code: #f06292;
+    --preformatted: #ccc;
+    --disabled: #111;
+
+    /* Tree View */
+    --tree-bg: rgba(42, 42, 42, 0.88);
+    --tree-text: rgba(241, 241, 241, 0.8);
+    --tree-border: var(--text-light);
+    --tree-caret: #696;
+    --tree-caret-last: #656;
+  }
+
+  /* Add a bit of transparency so light media isn't so glaring in dark mode */
+  img,
+  video {
+    opacity: 0.8;
+  }
+}
+
+/* #endregion */
+
+/* #region ---  element resets  --- */
+
+html {
+  /* Set the font globally */
+  font-family: var(--sans-font);
+  scroll-behavior: smooth;
+}
+
+/* Reset box-sizing */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/* Make the body a nice central block */
+body {
+  margin: 0;
+  color: var(--text);
+  font-size: var(--text-sz-l);
+}
+
+/* Format links */
+a,
+a:visited {
+  color: var(--accent);
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+/* Format buttons */
+button {
+  font-size: inherit;
+  font-family: inherit;
+  box-shadow: none;
+}
+
+/* Reset default appearance */
+textarea,
+select,
+input,
+progress {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
+details {
+  margin: 0;
+  padding: 0;
+}
+
+article,
+fieldset,
+dialog {
+  border: var(--border-width) solid var(--border);
+  padding: 1rem;
+  border-radius: var(--standard-border-radius);
+  margin-bottom: 1rem;
+}
+
+textarea,
+select,
+input {
+  color: var(--text);
+  background-color: var(--bg);
+  border: var(--border-width) solid var(--border);
+}
+
+/* do not show border around file selector button */
+input[type="file"] {
+  border: 0;
+}
+
+/* Prevent long strings from overflowing container */
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+}
+
+/* Line height */
+h1,
+h2,
+h3,
+h4 {
+  line-height: 1;
+}
+
+/* Format headers */
+h1 {
+  font-size: var(--text-h1-l);
+}
+
+h2 {
+  font-size: var(--text-h2-l);
+  /* margin-top: 3rem; */
+}
+
+h3 {
+  font-size: var(--text-h3-l);
+  /* margin-top: 3rem; */
+}
+
+h4 {
+  font-size: var(--text-h4-l);
+}
+
+/* 
+h5 {  font-size: 1.15rem;}
+h6 {  font-size: 0.96rem;} 
+*/
+
+p {
+  margin: 0;
+}
+
+/* #endregion */
+
+/* -------------------------------- */
+
+/* #region ---  Page Layout  --- */
+
+body>.page {
+  margin: 0;
+  position: relative;
+}
+
+body>.page::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  background-color: #212121;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%23292828' fill-opacity='0.4' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  opacity: 0.1;
+  z-index: -1;
+}
+
+.page>div.layout {
+  margin: 0;
+  padding-left: max(var(--layout-side-padding), var(--layout-side-padding-min));
+  padding-right: max(var(--layout-side-padding), var(--layout-side-padding-min));
+}
+
+/* #endregion */
+
+/* #region ---  Header  --- */
+
+/* Make the header bg full width, but the content inline with body */
+header {
+  background-color: #18191b;
+  border-bottom: var(--border-width) solid var(--text-light);
+  margin-bottom: 1rem;
+  max-width: 100vw;
+
+  display: flex;
+  flex-direction: column;
+}
+
+header>.container {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+header>.container::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.container>.brand {
+  margin-left: 1rem;
+  margin-right: auto;
+  align-self: flex-start;
+  justify-self: flex-start;
+}
+
+/* Wrapper containing the open/load buttons */
+.container>.end {
+  margin-right: 1rem;
+  margin-left: auto;
+  align-items: center;
+}
+
+.container>.nav {
+  margin: 0 auto;
+  height: 64px;
+  min-width: 40rem;
+  border: yellow dashed 0.5px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 8px;
+}
+
+/* -- Dropdown menu w/ tabs */
+/* 
+
+  mdn-dropdown {
+    display: contents;
+  }
+  mdn-dropdown:not([loaded],:focus-within) [slot="dropdown"] {
+    display: none;
+  }
+ */
+
+header button {
+
+  padding: 0.5rem;
+  background-color: inherit;
+  border: none;
+  --font-family: Menlo, Roboto Mono, monospace;
+  box-shadow: none;
+}
+
+/* #endregion */
+
+/* #region ---  <main>  --- */
+
+/* Content container */
+main {
+  margin: 0 auto;
+  min-height: 100vh;
+  /* max-width: calc(100vw - 2rem); */
+  /* max-width: 1400px; */
+  position: relative;
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+main::before {
+  /* Required for pseudo elements */
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.05;
+  z-index: -1;
+}
+
+pre {
+  overflow: auto;
+  color: var(--preformatted);
+}
+
+/* Embedded code blocks */
+code {
+  color: var(--marked);
+  font-family: var(--mono-font);
+  font-size: var(--text-sz-l);
+  padding: 0;
+}
+
+/* #endregion */
+
