--- a/src/style/botconfig.css
+++ b/src/style/botconfig.css
@@ -3,35 +3,38 @@
 
   /* #region ##  Layout  ## */
 
-  /* Layout side panels */
+  /* Layout static sizes */
+  --side-padding-min: 1rem;
+  --aside-width-min: 15rem;
+  --layout-min-width: 375px;
   --layout-side-padding-min: 1rem;
-  --layout-side-padding: max(var(--layout-side-padding-min),
-      calc((100vw - 1440px + (2rem)) / 2));
-  --layout-sidebar-min: 14rem;
-
-  --layout-content-min: 31rem;
-  --layout-content-max: 48rem;
-  --layout-full-width: calc(100vw - 2 * var(--layout-side-padding));
-  --layout-max-width: 1440px;
-  --layout-actual-width: max(var(--layout-max-width), 100vw);
-
-  --menu-width-max: 1024px;
   --menu-height-min: 40px;
-
-  /* Padding on the sides of the page content */
-  --layout-spacing: 1rem;
-
+  --layout-max-width: 1440px;
+  --menu-width-max: 1024px;
   /* Padding between elements */
   --layout-gap: 1rem;
 
-  /* --layout-side-gap: 2rem; */
+  /* Size of empty space on either side of the layout / 2 */
+  --layout-side-padding: max(var(--layout-side-padding-min),
+      calc((100vw - 1440px + (2rem)) / 2));
+
+  --side-padding-width: max(var(--side-padding-min), calc((100vw - var(--layout-max-width) + (2*var(--layout-gap))) / 2));
+
+  --layout-width: calc(var(--layout-max-width) - 2*var(--layout-side-padding));
+
+  --aside-width: max(var(--aside-width-min), calc(100vw - var(--layout-width)));
+
+  /* Padding on the sides of the page content */
+  --layout-spacing: 1rem;
 
   --header-height: 72px;
   --standard-border-radius: 5px;
   --border-width: 1px;
   --border-size: 1px;
-
   --line-height: 1rem;
+
+  /* Clamp Function */
+  /* clamp(min, preferred, max) */
 
   /* #endregion */
 
@@ -45,11 +48,11 @@
 
   /* #region ##  Theme (L)  ## */
   --bg: #fff;
-  --bg-mdn: #18191b;
-  --bg-header: #fff;
   --bg-accent: #f5f7ff;
   --bg-accent-2: #f5f5f5;
-  --bg-accent-mdn: #212426;
+  --bg-mdn: #18191b;
+  --bg-mdn-accent: #212426;
+  --bg-header: #fff;
 
   --text: #212121;
   --text-light: #585858;
@@ -62,6 +65,18 @@
   --marked: #ffdd33;
   --disabled: #efefef;
   --text-hp: #d7d7d7;
+  --content-border: #3f3f3f;
+  --text-sidelink: #bcbcbc;
+
+  /* Code Editor Tutorial */
+  --panel: #14182b;
+  --ok: #22c55e;
+  --warn: #eab308;
+  --err: #ef4444;
+  --tut-bg: #0f1221;
+  --tut-body-bg: #0b0f1d;
+  --tut-radius: 18px;
+  --tut-gap: 14px;
 
   /* Tree View Colors */
   --tree-bg: rgba(241, 241, 241, 0.8);
@@ -270,7 +285,68 @@ p {
 
 /* #endregion */
 
+/* #region ---  Inline Classes  --- */
 
+.row {
+  display: flex;
+  flex-direction: row;
+}
+
+.stack {
+  display: flex;
+  flex-direction: column;
+}
+
+.just-c {
+  justify-content: center;
+}
+
+.just-s {
+  justify-content: flex-start;
+}
+
+.just-end {
+  justify-content: end;
+}
+
+.just-ar {
+  justify-content: space-around;
+}
+
+.just-even {
+  justify-content: space-evenly;
+}
+
+.just-sb {
+  justify-content: space-between;
+}
+
+.just-self-s {
+  justify-self: flex-start;
+}
+
+.just-self-e {
+  justify-self: flex-end;
+}
+
+.align-c {
+  align-items: center;
+}
+
+.align-s {
+  align-items: flex-start;
+}
+
+.align-e {
+  justify-self: flex-end;
+}
+
+.v-align {
+  vertical-align: middle;
+}
+
+
+/* #endregion */
 
 /* #region ---  Page Layout  --- */
 
@@ -286,17 +362,18 @@ body>.page::before {
   width: 100%;
   height: 100%;
 
-  background-color: #212121;
+  /* background-color: #212121; */
+  background-color: var(--bg-mdn);
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%23292828' fill-opacity='0.4' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-  opacity: 0.1;
+  opacity: 0.2;
   z-index: -1;
 }
 
-.page>div.layout {
+/* .page>div.layout {
   margin: 0;
   padding-left: max(var(--layout-side-padding), var(--layout-side-padding-min));
   padding-right: max(var(--layout-side-padding), var(--layout-side-padding-min));
-}
+} */
 
 /* #endregion */
 
@@ -308,58 +385,51 @@ header {
   background-color: var(--bg-header);
 
   /* Gap before page content. */
-  margin-bottom: var(--layout-spacing);
-  border-bottom: #3f3f3f solid var(--border-size);
+  margin-bottom: var(--layout-gap);
+  border-bottom: var(--content-border) solid var(--border-size);
 }
 
-header>.container {
+.menu-wrap {
   min-height: var(--header-height);
 
   /* Keep width as wide as with page content. */
   padding-left: var(--layout-side-padding);
   padding-right: var(--layout-side-padding);
-
-  /* font-size: var(--text-sz-l); */
-
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
 }
 
-
 /* SPT Logo container */
-.container>.logo {
+.logo {
   /* Keeps this all the way to the left side. */
-  justify-self: start;
-  align-items: center;
+  padding-left: var(--layout-gap);
+
+
+  /* Size an element inline. */
+  /* inline-size: 36px; */
+  /* inline-width: 36px; */
+
+  /* Apply an image as a logo */
+  /* centered, covering all, non-repeating. */
+  /* background: url('./something') center / cover no-repeat;  */
 }
 
 .logo>img {
-  vertical-align: middle;
   height: 40px;
 }
 
 /* Hamburger button */
-.container>.nav_end {
-  justify-self: end;
-  align-items: center;
+.menu-hb {
+  padding-right: calc(var(--layout-gap) / 2);
 }
 
-.container>.nav {
 
+.menu-hdr {
   max-width: var(--menu-width-max);
   min-height: var(--menu-height-min);
-
   color: var(--);
   font-family: monospace;
-
-  display: flex;
-  flex-direction: row;
-  /* justify-content: space-between; */
-  align-items: center;
 }
 
-.menubtn {
+.menu-btn {
   border: none;
   border-bottom: #292828 solid 1px;
 
@@ -394,7 +464,7 @@ header>.container {
 main {
   padding-left: max(var(--layout-side-padding), var(--layout-side-padding-min));
   padding-right: max(var(--layout-side-padding), var(--layout-side-padding-min));
-  min-height: 100vh;
+  /* min-height: 100vh; */
   /* max-width: calc(100vw - 2rem); */
   /* max-width: 1400px; */
   position: relative;
@@ -402,8 +472,7 @@ main {
   flex-wrap: nowrap;
 }
 
-main::before {
-  /* Required for pseudo elements */
+/* main::before {
   content: '';
   position: absolute;
   top: 0;
@@ -412,7 +481,7 @@ main::before {
   height: 100%;
   opacity: 0.05;
   z-index: -1;
-}
+} */
 
 pre {
   overflow: auto;
@@ -435,14 +504,14 @@ code {
 aside {
   max-width: 25rem;
   padding: var(--layout-gap);
+  /* actually this should have right side border */
+  /* because they would come/go together. */
   border-left: var(--bg-accent) solid 0.5px;
   font-size: var(--text-sz-l);
 }
 
-.stack {
-  display: inline-flex;
-  flex-direction: column;
-  gap: var(--layout-spacing);
+aside>.stack {
+  gap: var(--layout-gap);
 }
 
 .sideNav {
@@ -476,7 +545,7 @@ aside button:hover {
 }
 
 .sideLink span {
-  color: #bcbcbc;
+  color: var(--text-sidelink);
   font-family: monospace;
 }
 
@@ -497,27 +566,179 @@ aside textarea {
 
 /* #endregion */
 
+/* #region ---  <section>  --- */
+
+/* The right-hand panel of main area */
+section {
+  /* Border between <aside> & <section> columns */
+  border-left: 0.5px solid var(--bg-accent);
+  border-right: 0.5px solid var(--bg-accent);
+
+  padding: var(--layout-gap);
+  font-size: var(--text-sz-l);
+
+  /* Code block editor */
+  /* background: linear-gradient(180deg, var(--tut-body-bg), var(--tut-bg) 35%); */
+}
+
+/* Button - action */
+.action {}
+
+/* #endregion */
+
+
+/* #region ---  Tab Panels  --- */
+
+/*  Elmnt  Size   */
+/*  aside  250px   */
+/*   main  1000px  */
+
+.title-wrap {
+  width: 100%;
+  align-items: center;
+
+  display: grid;
+  grid-template-columns: auto 120px 120px 120px;
+  gap: 5px 10px;
+  padding: var(--layout-gap) 0;
+  border-bottom: var(--bg-accent) solid 0.5px;
+}
+
+.title-wrap span {
+  min-height: 32px;
+  font-family: monospace;
+}
+
+.diff-wrap {
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  padding: var(--layout-gap) 0;
+  border-bottom: var(--bg-accent) solid 0.5px;
+}
+
+.diff-wrap>.btn-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr [col-start]);
+  gap: 5px 5px;
+}
+
+.tab-wrap {
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  padding: var(--layout-gap) 0;
+  border-bottom: var(--bg-accent) solid 0.5px;
+}
+
+.tab-grid {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr [col-start]);
+  column-gap: 5px;
+  row-gap: 5px;
+}
+
+.btn,
+.tab,
+.action,
+.select,
+.title-wrap button {
+  font-family: monospace;
+  min-height: 32px;
+  min-width: 100px;
+}
+
+.tab.active {
+  color: var(--text-hp);
+  /* background: linear-gradient(180deg rgba(125, 211, 252, 0.18), rgba(96, 165, 250, 0.18)); */
+  background: linear-gradient(180deg, var(--bg-accent), rgba(50, 160, 90, 0.3));
+}
+
+
+.editor-wrap {
+  position: relative;
+  border: 1px solid rgba(255, 255, 255, 0.12);
+  border-radius: 14px;
+  overflow: hidden;
+  min-height: 280px;
+  background-color: #0b1020;
+}
+
+.editor {
+  inline-size: 100%;
+  block-size: 380px;
+}
+
+iframe.preview {
+  inline-size: 100%;
+  block-size: 380px;
+  border: 1px solid rgba(255, 255, 255, 0.12);
+  border-radius: 14px;
+  background-color: var(--text-hp);
+}
+
+
+.btnFace {
+  font-family: monospace;
+  color: var(--text-hp);
+}
+
+.btn {
+  margin: 0;
+  padding: 0;
+  border: none;
+  border-radius: 0px;
+  color: var(--text-hp);
+  background-color: var(--bg-mdn);
+
+  /* background: inherit; */
+}
+
+button.tab {
+  /* margin: 4px; */
+  padding: 4px;
+  border: none;
+  color: var(--text-hp);
+  background-color: var(--bg-mdn);
+}
+
+.action {}
+
+.select {
+
+  border: none;
+
+
+}
+
+.btn.ok {
+  padding: 5px;
+}
+
+
+
+
+
+
+/* #endregion */
+
 
 /* #region ---  Card Panel  --- */
 
-section>.card_panel {
+.card_panel {
 
-  /* margin: 1rem 0.5rem; */
-  margin-top: 12px;
-  margin-bottom: 12px;
-
+  padding-top: 12px;
+  padding-bottom: 12px;
   max-width: 1200px;
-  /* min-height: 800px; */
   border: rgb(40, 40, 40) solid 1px;
 
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
   flex-shrink: 0;
-  align-items: center;
-
-  row-gap: 0px;
-  background: url('../assets/images/textured-brown.jpg');
+  column-gap: 8px;
+  row-gap: 8px;
+  /* background: url('../assets/images/textured-brown.jpg'); */
 
 }
 
@@ -527,33 +748,43 @@ section>.card_panel {
 
 .card_panel>.card {
 
-  margin-right: 8px;
+  /* margin-right: 8px;
   margin-left: 8px;
   margin-top: 16px;
-  margin-bottom: 16px;
+  margin-bottom: 16px; */
 
   max-width: 128px;
+  /* height: 160px; */
 
   text-wrap-mode: wrap;
   word-break: break-all;
+  border: var(--bg-accent) solid 0.5px;
 
   /* background-color: #424242; */
-  background-color: rgba(42, 42, 42, 0.3);
-  color: rgb(180, 147, 77);
-
+  /* background-color: rgba(42, 42, 42, 0.2); */
+  /* color: rgb(180, 147, 77); */
   display: flex;
   flex-direction: column;
-  align-items: center;
+}
+
+.card:hover {
+  /* background-color: #3f3f3f; */
+  background-color: rgba(42, 42, 42, 0.4);
 }
 
 .card_panel h2 {
-  display: block;
-  max-width: 128px;
+  height: 30px;
+  width: 128px;
+
+  color: var(--text-sidelink);
+  font-size: 17px;
+  font-family: monospace;
+
+  text-align: center;
   text-wrap-mode: wrap;
   word-break: break-word;
-  margin-top: 8px;
-  margin-bottom: 8px;
-  font-size: 18px;
+  align-self: center;
+  background: transparent;
 }
 
 /* .card h2 {
@@ -565,6 +796,7 @@ section>.card_panel {
 } */
 
 .card img {
+  vertical-align: bottom;
   width: 128px;
   height: 128px;
   background-color: rgba(16, 16, 16, 0.6);
@@ -572,6 +804,22 @@ section>.card_panel {
 
 /* #endregion */
 
+textarea.settings {
+  font-size: 16px;
+  line-height: 1.5;
+  color: var(--code);
+  height: 80vh;
+  width: min(calc(100vw - 15rem - 4*var(--layout-gap)), 1000px);
+}
+
+footer {
+  margin-top: 2rem;
+  padding: 2rem 1rem 1.5rem 1rem;
+  color: var(--text-light);
+  font-size: 0.9rem;
+  text-align: center;
+  border-top: var(--content-border) solid 1px;
+}
 
 /* #region ---  @media desktop (half-screen)  --- */
 
@@ -581,12 +829,12 @@ section>.card_panel {
     margin-bottom: 0;
   }
 
-  header>.container {
+  .menu-wrap {
     font-size: var(--text-sz-m);
     min-height: 56px;
   }
 
-  header svg {
+  .hb svg {
     height: 48px;
     width: 48px;
   }
@@ -595,8 +843,8 @@ section>.card_panel {
     height: 36px;
   }
 
-  .nav,
-  .nav_end {
+  .menu-hdr,
+  .hb {
     max-height: 48px;
   }
 
@@ -660,7 +908,7 @@ section>.card_panel {
     padding: 0.25rem 0.25rem;
   }
 
-  code {
+  .aside code {
     font-size: var(--text-sz-s);
   }
 
@@ -679,22 +927,17 @@ section>.card_panel {
 /* Tablet / Smarphone screen size(s) */
 @media only screen and (max-width: 750px) {
 
-  .container {
+  .menu-wrap {
     padding: 0;
   }
 
   .logo {
     padding: 0;
-    justify-self: start;
   }
 
   #nav_globals,
   #nav_ai {
     display: none;
-  }
-
-  .end {
-    justify-self: end;
   }
 
   .info_block img,
@@ -709,6 +952,13 @@ section>.card_panel {
 
   aside {
     display: none;
+  }
+
+  textarea.settings {
+    font-size: 15px;
+    line-height: 1.25;
+    height: 80vh;
+    width: calc(100vw - 3*var(--layout-gap));
   }
 }
 
